--- a/src/App.css
+++ b/src/App.css
@@ -10,20 +10,20 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
-.wrapper {
-  width: 1100px;
-  margin: auto;
-  /* position: relative; */
-}
-
-.wrapperContact {
+/* .wrapper {
   width: 1100px;
   margin: auto;
   position: relative;
-}
+} */
 
-@media screen and (max-width: 991.98px) {
+/* .wrapperContact {
+  width: 1100px;
+  margin: auto;
+  position: relative;
+} */
+
+/* @media screen and (max-width: 991.98px) {
   .wrapper {
     width: 90%;
   }
-}
+} */
