--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,5 +1,10 @@
 .wrapper {
   width: 100%;
+  padding-top: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .tengah {
