--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,18 +1,21 @@
 .center {
+  width: 1100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* min-height: 100vh; */
+  height: 100%;
+  /* background-color: rgba(0, 0, 0, 0.2); */
+  padding-bottom: 120px;
+  padding-top: 40px;
+}
+
+.profile {
   background-image: url("https://media.istockphoto.com/id/1849227434/id/foto/hijau-3d-latar-belakang-studio-bg-room-podium-panggung-kosong-produk-dinding-lantai-pola-dapur.jpg?s=1024x1024&w=is&k=20&c=UmyYamK8z087P6rydlNAHtgE8SCeAnda03lJ_yaqNe4=");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.profile {
   position: relative;
   width: 450px;
   backdrop-filter: blur(25px);
@@ -35,7 +38,7 @@
 
 .box {
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
   font-size: 15px;
   margin-top: -10px;
 }
@@ -47,36 +50,36 @@
 
 .errors {
   font-size: 13;
-  color:#FF0000;
+  color: #ff0000;
   /* position: "absolute"; */
   /* // left: 0; */
   margin-left: -10px;
   transition: 0.3s ease-in-out;
 }
 
-@media screen and (max-width:767px){
-  .center{
+@media screen and (max-width: 767px) {
+  .center {
     width: auto;
     height: auto;
+    font-size: 2px;
+    padding-left: 100px;
+  }
+
+  .profile {
     background-image: url("https://media.istockphoto.com/id/1849227434/id/foto/hijau-3d-latar-belakang-studio-bg-room-podium-panggung-kosong-produk-dinding-lantai-pola-dapur.jpg?s=1024x1024&w=is&k=20&c=UmyYamK8z087P6rydlNAHtgE8SCeAnda03lJ_yaqNe4=");
     background-size: 100% 100%;
     background-position-x: right 30px;
     background-repeat: repeat;
-    font-size: 2px;
-  }
-
-  .profile{
     width: 50%;
     height: auto;
     /* padding: 2.5em 1.5em 2em 2.5em; */
   }
 
-  .profile h1{
+  .profile h1 {
     font-size: 15px;
   }
 
-  .box{
+  .box {
     font-size: 10px;
   }
-  
 }
