--- a/src/components/TemplateLayout/Header/Header.css
+++ b/src/components/TemplateLayout/Header/Header.css
@@ -1,38 +1,21 @@
 .wrapperHeader {
-    width: 1100px;
-    display: flex;
-    justify-content: space-between;
-    background-color: rgba(0, 0, 0, 0.2);
-  }
+  width: 100%;
+  min-width: 375px;
+  display: flex;
+  justify-content: space-between;
+  background-color: rgba(0, 0, 0, 0.2);
+}
 
 .logoHeader a {
-    font-size: 30px;
-    font-weight: 600;
-    /* float: left; */
-    font-family: courier;
-    color: #364f6b;
-    padding-left: 10px;
-  }
-  
-  .menuHeader {
-    /* float: right; */
-    padding-bottom: 5px;
-    padding-right: 10px;
-  }
-  
-  
-  @media screen and (max-width: 767px) {
-    .wrapperHeader{
-        height: auto;
-        padding-left: 150px;
-    }
+  font-size: 30px;
+  font-weight: 600;
+  font-family: courier;
+  color: #364f6b;
+  padding-left: 10px;
+}
 
-    .logoHeader a {
-      /* display: block; */
-      font-size: 20px;
-      font-weight: 600;
-      text-align: center;
-    }
-  
-  }
-  
+.menuHeader {
+  padding-bottom: 5px;
+  padding-right: 10px;
+}
+
