--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,13 +1,11 @@
 .center {
-  width: 1100px;
+  width: 100%;
+  min-width: 375px;
   display: flex;
   justify-content: center;
   align-items: center;
-  /* min-height: 100vh; */
-  height: 100%;
-  /* background-color: rgba(0, 0, 0, 0.2); */
-  padding-bottom: 120px;
-  padding-top: 40px;
+  min-height: 100vh;
+  background-color: "#fff";
 }
 
 .profile {
@@ -16,7 +14,6 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  position: relative;
   width: 450px;
   backdrop-filter: blur(25px);
   border: 2px solid var(--primary-color);
@@ -51,28 +48,21 @@
 .errors {
   font-size: 13;
   color: #ff0000;
-  /* position: "absolute"; */
-  /* // left: 0; */
   margin-left: -10px;
   transition: 0.3s ease-in-out;
 }
 
-@media screen and (max-width: 767px) {
+
+@media screen and (max-width: 750px) {
   .center {
-    width: auto;
+    width: 50%;
     height: auto;
-    font-size: 2px;
-    padding-left: 100px;
   }
 
   .profile {
-    background-image: url("https://media.istockphoto.com/id/1849227434/id/foto/hijau-3d-latar-belakang-studio-bg-room-podium-panggung-kosong-produk-dinding-lantai-pola-dapur.jpg?s=1024x1024&w=is&k=20&c=UmyYamK8z087P6rydlNAHtgE8SCeAnda03lJ_yaqNe4=");
-    background-size: 100% 100%;
-    background-position-x: right 30px;
-    background-repeat: repeat;
     width: 50%;
     height: auto;
-    /* padding: 2.5em 1.5em 2em 2.5em; */
+    padding: 5.5em 1.5em 2em 1.5em;
   }
 
   .profile h1 {
@@ -81,5 +71,5 @@
 
   .box {
     font-size: 10px;
-  }
+  } 
 }
