--- a/src/styles/Login.css
+++ b/src/styles/Login.css
@@ -46,6 +46,7 @@ a:hover {
   background-repeat: no-repeat;
   background-attachment: fixed;
   width: 100%;
+  min-width: 375px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -60,6 +61,7 @@ a:hover {
   background-repeat: no-repeat;
   background-attachment: fixed;
   width: 100%;
+  min-width: 375px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -74,6 +76,7 @@ a:hover {
   background-repeat: no-repeat;
   background-attachment: fixed;
   width: 100%;
+  min-width: 375px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -294,6 +297,7 @@ a:hover {
 /* RESPONSIVE LOGIN - REGISTRASI - FORGOT */
 @media screen and (max-width: 767px) {
   /* .wrapper1 {
+    min-height: 180vh;
     width: auto;
     height: auto;
     background-image: url("https://media.istockphoto.com/id/1777088857/id/foto/konsep-keamanan-digital.jpg?s=1024x1024&w=is&k=20&c=8FVwviAXiGDjOm6xm7emZ4OHB4i1HJfgEUgCyHFn3kg=");
@@ -398,4 +402,17 @@ a:hover {
   html {
     zoom: 0.55;
   }
+
+  .wrapper1{
+    min-height: 180vh;
+  }
+
+  .wrapper2{
+    min-height: 180vh;
+  }
+
+  .wrapper3{
+    min-height: 180vh;
+  }
+
 }
